# ai-agent

./: .editorconfig  .env.production.example  .gitattributes  .gitignore  8.5_火山4步提示词流程.md  AGENTS.md  AGENT_SYSTEM.md  AI-Agent系统架构设计文档.md  AI-Agent详细设计文档.md  Agent工作台需求文档.md  CLAUDE.md  Makefile  README.md  ai agent 开发需求整理.txt  docker-compose.prod.yml  docker-compose.sonar.yml  docker-compose.yml  env.example  skills-lock.json  sonar-project.properties  代码生成质量保证与LSP集成设计.md  依赖更新总结.md  前后端对话功能统一设计文档.md  工作台与Agent系统集成设计.md  开源项目定制开发选型分析.md  技术选型报告.md  版本配置分析.md  系统可测试性与TDD设计.md  记忆和会话功能整合文档.md  项目开发任务分解.md
backend/: .dockerignore  .env.example  .env.gateway.example  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Deployment  Deployment.yaml  Dockerfile  Dockerfile-dep  Dockerfile.base  Dockerfile.basebackup  Dockerfilebackup  Makefile  README.md  alembic.ini  debug_imports.py  debug_test_collect.py  exceptions.py  litellm_test_results_final.json  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  test-results.xml  test_results_20260117_121707.json  test_results_20260117_122354.json  test_results_20260117_122842.json
backend/agents/example-agent/: agent.toml
backend/alembic/: env.py  ops_sql_export.py  script.py.mako
backend/alembic/sql/: 001_initial.down.sql  001_initial.up.sql  002_add_performance_indexes.down.sql  002_add_performance_indexes.up.sql  003_fix_user_schema.down.sql  003_fix_user_schema.up.sql  004_fix_timestamp_defaults.down.sql  004_fix_timestamp_defaults.up.sql  005_add_session_status_and_context.down.sql  005_add_session_status_and_context.up.sql  006_fix_messages_table.down.sql  006_fix_messages_table.up.sql  007_add_memory_last_accessed.down.sql  007_add_memory_last_accessed.up.sql  008_add_langgraph_tables.down.sql  008_add_langgraph_tables.up.sql  009_add_agent_config_columns.down.sql  009_add_agent_config_columns.up.sql  010_align_users_for_fastapi_users.down.sql  010_align_users_for_fastapi_users.up.sql  011_add_anonymous_user_support.down.sql  (+202 more)
backend/api/: __init__.py  deps.py  errors.py
backend/app/: __init__.py  config.py  config_loader.py  main.py
backend/backend/: test-results.xml
backend/bootstrap/: __init__.py  config.py  config_loader.py  event_loop.py  main.py
backend/config/: NETWORK_CONFIG_GUIDE.md  README.md  app.development.toml  app.production.toml  app.staging.toml  app.toml  env.example  execution.toml  gateway-catalog.seed.json  litellm_models.yaml  mcp.toml  tools.toml
backend/core/: __init__.py  config.py  interfaces.py  types.py
backend/db/: __init__.py  database.py  redis.py  vector.py
backend/docs/: AGENT_ARCHITECTURE_DESIGN.md  AI_GATEWAY_DOMAIN_ARCHITECTURE.md  AMAZON_VIDEO_INTEGRATION.md  ARCHITECTURE.md  AUTHENTICATION.md  CHAT_MESSAGE_FLOW.md  CODE_STANDARDS.md  CONFIGURATION.md  CONTEXT_MANAGEMENT_ARCHITECTURE.md  CONTEXT_MANAGEMENT_BEST_PRACTICES.md  CONTEXT_MANAGEMENT_IMPLEMENTATION.md  CORE_ARCHITECTURE_ANALYSIS.md  DEPENDENCY_ANALYSIS.md  DEPENDENCY_INJECTION_REFACTOR.md  DEVELOPMENT.md  DIRECTORY_STRUCTURE_ANALYSIS.md  ERROR_FIXES_REPORT.md  GATEWAY_COMPATIBILITY_CHECK.md  GATEWAY_CURSOR_CLAUDE_CODE.md  GATEWAY_DEPLOYMENT_CHECKLIST.md  GATEWAY_PRICING_AND_LITELLM_COST.html  GATEWAY_PRICING_AND_LITELLM_COST.md  GATEWAY_THIRDPARTY_CLIENT_GUIDE.md  IMPROVEMENT_RECOMMENDATIONS.md  LANGGRAPH_ARCHITECTURE_RATIONALE.md  LATEST_PAPERS_ALIGNMENT.md  LINT_CONFIGURATION.md  LISTING_STUDIO_IMAGE_GEN_PORT_RFC.md  LITELLM_CAPABILITY_MATRIX.md  LLM_GATEWAY_ARCHITECTURE.md  MCP_AUTO_INIT.md  MCP_PROMPTS_AND_TOOLS.md  MCP_QUICKSTART.md  MIGRATION_PLAN_ZERO_REGRESSION.md  PERMISSION_SYSTEM_ARCHITECTURE.md  README.md  STRUCTURE_IMPROVEMENTS_COMPLETED.md  STUDIO_IMPLEMENTATION.md  STUDIO_VALUE_SCENARIOS.md  SessionManager重构说明.md  (+9 more)
backend/domains/: __init__.py
backend/evaluation/: README.md  __init__.py  benchmark_loader.py  gaia.py  llm_judge.py  performance.py  task_completion.py  tool_accuracy.py
backend/examples/: session_manager_usage.py
backend/libs/: __init__.py  background_tasks.py  crypto.py  identity_bridge_deps.py  model_connectivity.py  rate_limit.py
backend/middleware/: __init__.py  auth.py  error_handler.py  logging.py  rate_limit.py
backend/models/: __init__.py  agent.py  base.py  memory.py  message.py  session.py  user.py  workflow.py
backend/schemas/: __init__.py  message.py  user.py
backend/scripts/: README.md  backfill_metrics_hourly.py  check_db.py  check_encoding_issues.py  check_rules.py  check_sonar_env.py  cleanup_anonymous_users.py  cleanup_expired_anonymous_sessions.py  cleanup_sandbox_containers.py  cleanup_stale_route_grants.py  cleanup_stale_vkey_grants.py  diagnose_credential.py  diagnose_router_deployment.py  fix_all_encoding_issues.py  fix_credential_created_by_user_id.py  fix_sessions_table.py  generate_alembic_sql_files.py  identify_duplicate_credential_copies.py  inspect_duplicate_attribution.py  inspect_gateway_logs.py  list_configured_models.py  migrate_agnes_provider.py  migrate_gateway_test_paths.py  migrate_imports.py  migrate_test_db.py  probe_dashscope_embedding.py  quick_test_llm.py  reassign_credential_creator.py  reset_quota.py  run_dev_server.py  run_seed_gateway.py  run_server.py  run_sonar_scanner.py  seed_gateway_models.py  set_admin.py  test_checkpointer.py  test_gateway_concurrency.py  test_gateway_proxy.py  test_litellm_models.py  test_llm_providers.py  (+5 more)
backend/seeds/: README.md  gateway-catalog.seed.json
backend/services/: __init__.py  agent.py  chat.py  checkpoint.py  embedding.py  memory.py  session.py  stats.py  title.py  user.py
backend/shared/: __init__.py  interfaces.py  types.py
backend/tests/: CODE_FIXES_SUMMARY.md  CONFTEST_ANALYSIS.md  DUPLICATE_TESTS_REPORT.md  PERMISSION_SYSTEM_TESTS.md  README.md  TEST_DATABASE.md  TEST_RUN_SUMMARY.md  __init__.py  conftest.py
backend/tools/: __init__.py  base.py  code_tools.py  file_tools.py  registry.py  search_tools.py
backend/utils/: __init__.py  cache.py  crypto.py  logging.py  serialization.py  tokens.py
backend/workers/: __init__.py  celery_app.py  tasks.py
(+3325 files in other folders)
